--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
-debug = True
+spring.datasource.url=jdbc:postgresql://localhost:5432/cruddemo
+spring.datasource.username= postgres
+spring.datasource.password=ENC(kIWQQY5/2MMh3IK3OWVoVQ==)
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+myProperty=ENC(kIWQQY5/2MMh3IK3OWVoVQ==)
